<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kryptonapps.kon_el.trial.ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="16dp"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:padding="16dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_status"
                    android:textSize="24sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?attr/colorAccent" />

                <TextView
                    android:id="@+id/profile_status_textview"
                    android:layout_width="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_height="wrap_content"
                    android:text="@string/large_text"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_margin="16dp"
            android:padding="16dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/profile_ethnicity_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_details"
                    android:textSize="24sp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="?attr/colorAccent" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_margin="5dp"
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:background="@android:color/transparent"
                        android:src="@drawable/ic_cake"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>
                    <TextView
                        android:text="@string/profile_birthday"
                        android:layout_gravity="center_vertical"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/profile_birthday_textview"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_gravity="center_vertical"
                        android:layout_height="wrap_content"
                        android:text="@string/placeholder_birthday"/>
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_margin="5dp"
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:background="@android:color/transparent"
                        android:src="@drawable/ic_weight"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="@string/profile_weight"
                        android:layout_gravity="center_vertical"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/profile_weight_textview"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_gravity="center_vertical"
                        android:layout_height="wrap_content"
                        android:text="@string/placeholder_weight"/>
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_margin="5dp"
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:background="@android:color/transparent"
                        android:src="@drawable/ic_height"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="@string/profile_height"
                        android:layout_gravity="center_vertical"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/profile_height_textview"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_gravity="center_vertical"
                        android:layout_height="wrap_content"
                        android:text="@string/placeholder_height"/>
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_margin="5dp"
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:background="@android:color/transparent"
                        android:src="@drawable/ic_veg"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="@string/profile_vegetarain"
                        android:layout_gravity="center_vertical"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/profile_vegetarian_textview"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_gravity="center_vertical"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/holo_green_dark"
                        android:text="@string/yes"/>
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_margin="5dp"
                    android:padding="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:background="@android:color/transparent"
                        android:src="@drawable/ic_drink"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:text="@string/profile_drinks"
                        android:layout_gravity="center_vertical"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/profile_drinks_textview"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_gravity="center_vertical"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/holo_red_light"
                        android:text="@string/no"/>
                </LinearLayout>


            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
